Added delete functionality. Fixed bug where old workout items would lose id's when list was re-rendered.

--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,9 @@
 }
 
 .menu--button-toolbar {
-  margin-left: auto;
-  margin-right: auto;
+/*  margin-left: auto;
+  margin-right: auto;*/
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
